kubernetes/szilardshome/my-apps/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  ports:
  - name: webui
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: torrrent
    port: 6881
    protocol: TCP
    targetPort: 6881  
  selector:
    app.kubernetes.io/name: qbittorrent
